--- a/index.html
+++ b/index.html
@@ -187,14 +187,14 @@
                 <!-- COUNTER -->
                 <div class="counter-cont">
                     <div class="counter" data-target="5"></div>
-                    <span>Schools</span>
+                    <span>Institutions</span>
                   </div>
                   <div class="counter-cont">
-                    <div class="counter" data-target="200"></div>
+                    <div class="counter" data-target="350"></div>
                     <span>Students</span>
                   </div>
                   <div class="counter-cont">
-                    <div class="counter" data-target="30"></div>
+                    <div class="counter" data-target="50"></div>
                     <span>Learners</span>
                   </div>
                 <!-- COUNTER -->
