--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <a href="#" class="footer__icon">
                     <ion-icon name="code-slash-outline"></ion-icon>                </a>
             </div>
-            <Santhosh class="footer__copy" style="color: #0A1931;">Prakaash : 95978 51787 | Santhosh : 99445 76429</p>
+            <p class="footer__copy" style="color: #0A1931;">Prakaash : 95978 51787 | Santhosh : 99445 76429</p>
             <p class="footer__copy">&#169; No Rights Reserved</p>
         </footer>
 
