--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         </script>
 
         <!--===== COUNTER  =====-->
-        <script>
+<!--         <script>
             const counters = document.querySelectorAll(".counter");
             counters.forEach((counter) => {
             counter.innerText = "0";
@@ -263,7 +263,7 @@
             };
             updateCounter();
             });
-        </script>
+        </script> -->
 
         <!--===== ICONS  =====-->
         <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>x
