--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                     </div>
 
                     <div class="testimonial">
-                        <p class="testimonial__text mb-25">I Had Looked Into Learning Cybersecurity, But Was Too Intimidated To Start. Cyberfreaks Was Perfect! </p>
+                        <p class="testimonial__text mb-25">I Had Looked Into Learning Cyber Security, But Was Too Intimidated To Start. Cyberfreaks Was Perfect! </p>
         
                         <div class="testimonial__details">
                             <div class="testimonial__img">
@@ -208,9 +208,9 @@
 
                 <div class="contact__container bd-grid">
                     <form action="" class="contact__form">
-                        <input type="text" placeholder="Name" class="contact__input">
-                        <input type="mail" placeholder="Email" class="contact__input">
-                        <textarea placeholder="Your Feedback" id="" cols="0" rows="10" class="contact__input"></textarea>
+                        <input type="text" placeholder="Name" class="contact__input" required>
+                        <input type="mail" placeholder="Email" class="contact__input" required>
+                        <textarea placeholder="Your Feedback" id="" cols="0" rows="10" class="contact__input" required></textarea>
                         <input type="button" value="Contact" class="contact__button button">
                     </form>
                 </div>
