--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                         <input type="text" placeholder="Name" class="contact__input" required>
                         <input type="mail" placeholder="Email" class="contact__input" required>
                         <textarea placeholder="Your Feedback" id="" cols="0" rows="10" class="contact__input" required></textarea>
-                        <input type="button" value="Contact" class="contact__button button">
+                        <input type="submit" value="Contact" class="contact__button button">
                     </form>
                 </div>
             </section>
