--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
 
-                <div class="contact__container bd-grid">
+                <div action="" class="contact__container bd-grid">
                     <form class="contact__form">
                         <input type="text" placeholder="Name" class="contact__input" required>
                         <input type="mail" placeholder="Email" class="contact__input" required>
