--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     <span>Institutions</span>
                   </div>
                   <div class="counter-cont">
-                    <div class="counter" data-target="350"></div>
+                    <div class="counter" data-target="550"></div>
                     <span>Students</span>
                   </div>
                   <div class="counter-cont">
@@ -206,7 +206,7 @@
             <section class="contact section" id="contact">
                 <h2 class="section-title">Contact</h2>
 
-                <div action="" class="contact__container bd-grid">
+                <div class="contact__container bd-grid">
                     <form class="contact__form">
                         <input type="text" placeholder="Name" class="contact__input" required>
                         <input type="mail" placeholder="Email" class="contact__input" required>
