--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form">
+                    <form action="" class="contact__form" onsubmit="uploadData(); return false;">
                         <input type="text" placeholder="Name" class="contact__input" required>
                         <input type="mail" placeholder="Email" class="contact__input" required>
                         <textarea placeholder="Your Feedback" id="" cols="0" rows="10" class="contact__input" required></textarea>
@@ -253,19 +253,12 @@
           };
           firebase.initializeApp(firebaseConfig);
 
-              const database = firebase.database();
+          const database = firebase.database();
 
-  // Get the form element
-  const contactForm = document.getElementById('contact-form');
-
-  // Listen for form submission
-  contactForm.addEventListener('submit', (e) => {
-    e.preventDefault(); // Prevent the default form submission behavior
-
-    // Get values from the form
-    const name = contactForm.querySelector('input[type="text"]').value;
-    const email = contactForm.querySelector('input[type="email"]').value;
-    const feedback = contactForm.querySelector('#feedback').value;
+function uploadData() {
+    const name = document.getElementById('name').value;
+    const email = document.getElementById('email').value;
+    const feedback = document.getElementById('feedback').value;
 
     // Push the data to Firebase
     const feedbackRef = database.ref('feedbacks');
@@ -276,10 +269,12 @@
     });
 
     // Clear form inputs
-    contactForm.reset();
+    document.getElementById('name').value = '';
+    document.getElementById('email').value = '';
+    document.getElementById('feedback').value = '';
 
     alert('Feedback submitted successfully!');
-  });
+               }
         </script>
 
 
