--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
                 <h2 class="section-title">Contact</h2>
 
                 <div class="contact__container bd-grid">
-                    <form action="" class="contact__form" onsubmit="return validateForm()">
+                    <form action="" class="contact__form" onsubmit="uploadData();">
                         <input type="text" placeholder="Name" class="contact__input" required>
                         <input type="mail" placeholder="Email" class="contact__input" required>
                         <textarea placeholder="Your Feedback" id="" cols="0" rows="10" class="contact__input" required></textarea>
@@ -255,15 +255,10 @@
 
           const database = firebase.database();
 
-            function validateForm() {
+              function uploadData() {
     const name = document.getElementById('name').value;
     const email = document.getElementById('email').value;
     const feedback = document.getElementById('feedback').value;
-
-    if (name === '' || email === '' || feedback === '') {
-      alert('Please fill in all fields.');
-      return false;
-    }
 
     // Push the data to Firebase
     const feedbackRef = database.ref('feedbacks');
@@ -279,8 +274,7 @@
     document.getElementById('feedback').value = '';
 
     alert('Feedback submitted successfully!');
-    return true;
-            }
+              }
         </script>
 
 
