--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </div>    
                     <div>
                         <h2 class="about__subtitle">Hey I'm <a href="https://bit.ly/3AcaKlR" style="color: var(--first-color);"> Prakaash.</a></h2> 
-                        <p class="about__text">A Enthusiast Cyber Security Analyst, Web Developer, Designer & A Photographer. I Have Started An CyberSecurity StartUp, Developed 3D Web App, Netflix & Spotify Clones, And Designed Seamless Prototypes & Logos </p>           
+                        <p class="about__text">A Passionate Full Stack Developer and Cyber Security Analyst with 4+ years of experience.  Certified Cybersecurity Professional proficient in offensive security.</p>           
                     </div>   
                 </div>
 
